@@ -114,6 +114,7 @@ public class TestDriver {
         String[] options = new String[] {
                 "--module-path", MOD_DEST_DIR.toString(),
                 "--add-modules", String.join(",", modules),
+                "-Djava.security.manager=allow",
                 "-m", "m3/p3.NoGetClassLoaderAccess"
         };
         assertTrue(executeTestJava(options)
